# Kuka_ROS_Manipulation

./: README.md
SIMTech_ws/src/simtech_kuka/ethernet_communication_interface/simtech_kuka_rsi_hw_interface/: CMakeLists.txt  package.xml
SIMTech_ws/src/simtech_kuka/ethernet_communication_interface/simtech_kuka_rsi_hw_interface/config/: hardware_controllers.yaml  rsi_interface_params.yaml
SIMTech_ws/src/simtech_kuka/ethernet_communication_interface/simtech_kuka_rsi_hw_interface/include/simtech_kuka_rsi_hw_interface/: rsi_command.h  rsi_state.h  simtech_kuka_rsi_hw_interface.h
SIMTech_ws/src/simtech_kuka/ethernet_communication_interface/simtech_kuka_rsi_hw_interface/krl/KR_C4/Deprecated/: ros_rsi.rsi  ros_rsi.rsi.xml  ros_rsi.rsix  ros_rsi.src  ros_rsi_ethernet.xml  ros_rsi_v1.src  ros_rsi_v2.src  ros_rsi_v3.src
SIMTech_ws/src/simtech_kuka/ethernet_communication_interface/simtech_kuka_rsi_hw_interface/krl/KR_C4/Deprecated/rsi_4/: ros_rsi4.src  ros_rsi_ethernet.xml
SIMTech_ws/src/simtech_kuka/ethernet_communication_interface/simtech_kuka_rsi_hw_interface/krl/KR_C4/DuanChiang/: kuka_rsi_ros.sub  ros_rsi_on.src  ros_rsi_wait.src
SIMTech_ws/src/simtech_kuka/ethernet_communication_interface/simtech_kuka_rsi_hw_interface/krl/KR_C4/RSI_Final_Version/: multilayer_EXT_XY_FLIP.src  ros_rsi.rsix  ros_rsi4.src  ros_rsi_ethernet.xml
SIMTech_ws/src/simtech_kuka/ethernet_communication_interface/simtech_kuka_rsi_hw_interface/launch/: simtech_kuka_rsi_hardware_interface.launch
SIMTech_ws/src/simtech_kuka/ethernet_communication_interface/simtech_kuka_rsi_hw_interface/msg/: MsgCartPosition.msg  MsgCartVelocity.msg
SIMTech_ws/src/simtech_kuka/ethernet_communication_interface/simtech_kuka_rsi_hw_interface/src/: simtech_kuka_rsi_hw_interface.cpp  simtech_kuka_rsi_hw_interface_node.cpp
SIMTech_ws/src/simtech_kuka/ethernet_communication_interface/simtech_kuka_rsi_hw_interface/test/: test_hardware_interface.launch  test_two_robots.launch
SIMTech_ws/src/simtech_kuka/kuka_KRL_programs/: Cube_15X30X10_auto.src  Cube_26_26_4_8_post.src  Lequn_MRP_TopLeft_XY.src  Lequn_MRP_TopLeft_XY_no_rsi.src  Lequn_Singlebead_one.src  Lequn_Singlebead_powder.src  Lequn_rsi_testing.src  Lequn_wire_spiral.src  kuka_eki_command_server.sub  motion_autocontrol.src  part3_2_post.src  ros_rsi4.src  ros_rsi_v1.src  ros_rsi_v2.src  ros_rsi_v3.src  server_motion.src
SIMTech_ws/src/simtech_kuka/kuka_advanced_manipulation_pkg/: CMakeLists.txt  package.xml
SIMTech_ws/src/simtech_kuka/kuka_kr90_moveit_config/: CMakeLists.txt  package.xml
SIMTech_ws/src/simtech_kuka/simtech_kuka_kr500_support/: CMakeLists.txt  package.xml
SIMTech_ws/src/simtech_kuka/simtech_kuka_kr500_support/launch/: load_kr500r2380.launch  test_kr500r2380.launch
SIMTech_ws/src/simtech_kuka/simtech_kuka_kr500_support/meshes/kr500r2380/collision/: link_4.stl  link_5.stl  link_6.stl
SIMTech_ws/src/simtech_kuka/simtech_kuka_kr500_support/meshes/kr500r2380/visual/: base_link.stl
SIMTech_ws/src/simtech_kuka/simtech_kuka_kr500_support/test/: roslaunch_test_kr500r2380.xml
SIMTech_ws/src/simtech_kuka/simtech_kuka_kr500_support/urdf/: kr500r2380.xacro  kr500r2380_macro.xacro
SIMTech_ws/src/simtech_kuka/simtech_kuka_kr90_support/: CMakeLists.txt  package.xml
SIMTech_ws/src/simtech_kuka/simtech_kuka_kr90_support/config/: machining_workcell_simulation.rviz
SIMTech_ws/src/simtech_kuka/simtech_kuka_kr90_support/launch/: kr90_machining_workcell_simulation.launch  load_kr90r2700.launch  robot_interface_streaming_kr90_rsi.launch  test_kr90r2700.launch
SIMTech_ws/src/simtech_kuka/simtech_kuka_kr90_support/meshes/kr90r2700/collision/: base_link.stl  link_6.stl
SIMTech_ws/src/simtech_kuka/simtech_kuka_kr90_support/meshes/kr90r2700/visual/: link_1.dae  link_2.dae  link_3.dae  link_3.stl  link_4.stl  link_5.dae  link_5.stl  link_6.dae
SIMTech_ws/src/simtech_kuka/simtech_kuka_kr90_support/meshes/kr90r2700/visual/DAE/: base_link.dae  link_4.dae
SIMTech_ws/src/simtech_kuka/simtech_kuka_kr90_support/meshes/kr90r2700_old/collision/: base_link.stl  link_4.stl  link_5.stl  link_6.stl
SIMTech_ws/src/simtech_kuka/simtech_kuka_kr90_support/meshes/kr90r2700_old/visual/: link_3.stl
SIMTech_ws/src/simtech_kuka/simtech_kuka_kr90_support/meshes/kr90r2700_old/visual/DAE/: base_link.dae  link_4.dae  link_5.dae  link_6.dae
SIMTech_ws/src/simtech_kuka/simtech_kuka_kr90_support/test/: roslaunch_test_kr90r2700.xml
SIMTech_ws/src/simtech_kuka/simtech_kuka_kr90_support/urdf/: kr90_workcell_simulation.xacro  kr90r2700.xacro  kr90r2700_macro.xacro  spindle.xacro
SIMTech_ws/src/simtech_kuka/simtech_kuka_robot_support/: CMakeLists.txt  package.xml
SIMTech_ws/src/simtech_kuka/simtech_kuka_robot_support/urdf/: kr120r2500pro.urdf  kr120r2500pro.xacro  kr120r2500pro_macro.xacro
SIMTech_ws/src/simtech_kuka/simtech_kuka_robot_support/urdf/B/: kr120r2500proB.urdf  kr120r2500proB.xacro  kr120r2500proB_macro.xacro
SIMTech_ws/src/simtech_kuka/simtech_kuka_workcell/: CMakeLists.txt  package.xml
SIMTech_ws/src/simtech_kuka/simtech_kuka_workcell/config/: machining_workcell.rviz  workcell.rviz
SIMTech_ws/src/simtech_kuka/simtech_kuka_workcell/launch/: kuka_LAAM_eki_workcell.launch  kuka_LAAM_simulation_workcell.launch  kuka_LDED_rsi_workcell.launch  kuka_machining_workcell.launch  kuka_machining_workcell_simulation.launch  workcell_dual.launch  workcell_dual1.launch  workcell_tcp.launch
SIMTech_ws/src/simtech_kuka/simtech_kuka_workcell/meshes/head/collision/: laserhead.STL
SIMTech_ws/src/simtech_kuka/simtech_kuka_workcell/meshes/spindle/collision/: spindle.stl
SIMTech_ws/src/simtech_kuka/simtech_kuka_workcell/meshes/spindle/visual/: spindle.STEP
SIMTech_ws/src/simtech_kuka/simtech_kuka_workcell/src/: path_follower.py
SIMTech_ws/src/simtech_kuka/simtech_kuka_workcell/urdf/: LAAM_workcell.xacro  LAAM_workcell_simulation.xacro  head.xacro  irbp_a250.xacro  kuka_LAAM_robot.xacro  kuka_LAAM_robot_simulation.xacro  kuka_machining_robot.xacro  kuka_machining_robot_simulation.xacro  machining_workcell.xacro  machining_workcell_simulation.xacro
(+66 files in other folders)
