<?xml version="1.0"?>
<package format="2">
  <name>simtech_kuka_kr500_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the KUKA KR 500 (and variants).
    </p>
    <!-- <p>
      This package contains configuration data, 3D models and launch files
      for KUKA KR 90 manipulators. This currently includes the R2380 only.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>- Default</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information
      in the <em>KUKA Roboter GmbH - KR AGILUS sixx - With W and C Variants -
      Specification</em> version <em>Spez KR AGILUS sixx V12, 26.03.2015</em>.
      All urdfs are based on the default motion and joint velocity limits,
      unless noted otherwise (ie: no support for high speed joints,
      extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p> -->
  </description>
  <author email="chen1470@e.ntu.edu.sg">Chen Lequn</author>
  <maintainer email="chen1470@e.ntu.edu.sg">Chen Lequn</maintainer>
  <license>ToDo</license>


  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>industrial_robot_client</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>kuka_resources</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
