<package>
  <name>simtech_kuka_robot_support</name>
  <version>0.4.0</version>
  <description>
    <p>
      ROS Industrial support for the Kuka robot used in SIMTech ISDN joint lab.
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for two Kuka robot (one for machining and one for AM).
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in
      the kuka robot data sheets.  All URDFs / XACROs are based on the
      default motion and joint velocity limits, unless noted otherwise (ie:
      no support for high speed joints, extended / limited motion ranges or
      other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="chen1189@e.ntu.edu.sg">Chen Lequn</author>
  <maintainer email="chen1189@e.ntu.edu.sg">Chen Lequn</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
