<?xml version="1.0"?>
<package format="2">
  <name>simtech_kuka_rsi_hw_interface</name>
  <version>0.1.0</version>
  <description>SIMTech ROS-Control hardware interface for use with KUKA RSI - Based on ROS Industrial</description>
  <author>Chen Lequn</author>
  <maintainer email="chen1470@e.ntu.edu.sg">Chen Lequn</maintainer>
  <license>NA</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>

  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roslib</build_depend>

 
  


</package>
